syntax = "proto3";

option go_package= "./pkg/pb/";

service FriendService {
    rpc FriendRequest (FriendRequestRequest) returns (FriendRequestResponse){};
    rpc FriendList (FriendListRequest) returns (FriendListResponse);
}

message FriendRequestRequest {
    string UserID =1;
    string FriendID =2;
}

message FriendRequestResponse {
    string FriendsID = 1;
    string UserID =2;
    string Status =4;
    string  UpdateAt =5;
}

message FriendListRequest {
    string UserID =1;
    string OffSet =2;
    string Limit=3;
    string Status =4;
}

message FriendListResponse {
    string FriendID =1;
    string UpdateAt =2;
    string Messsage =3;
    string UniqueFriendsID =4;
}